Add ytdl_args to config

--- a/src/ytbeetdl/default_config.yaml
+++ b/src/ytbeetdl/default_config.yaml
@@ -1,3 +1,10 @@
+# This option can be used to specify arguments to yt-dlp
+
+ytdl_args:
+  - '-f'
+  - 'bestaudio[ext=m4a]'
+
+
 # This is a Beets config. This will be combined with your beets config before
 # an album is downloaded. Do not remove the lines that say "DO NOT REMOVE"
 
