Remove single quotes - they aren't needed

--- a/src/ytbdl/default_config.yaml
+++ b/src/ytbdl/default_config.yaml
@@ -1,8 +1,8 @@
 # This option can be used to specify arguments to yt-dlp
 
 ytdl_args:
-  - '-f'
-  - 'bestaudio[ext=m4a]'
+  - -f
+  - bestaudio[ext=m4a]
 
 
 # This is a Beets config. This will be combined with your beets config before
